--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,11 @@ project(TODO)
 # then the source file (main.c, draw.c,...etc)
 
 add_executable(todo 
-    src/main.c 
-    src/File_Handle/fileManger.c
-    src/Todo/todo.c
-    src/Container/Container.c
+    ${CMAKE_SOURCE_DIR}/src/main.c 
+    ${CMAKE_SOURCE_DIR}/src/File_Handle/fileManger.c
+    ${CMAKE_SOURCE_DIR}/src/Todo/todo.c
+    ${CMAKE_SOURCE_DIR}/src/Container/Container.c
+    ${CMAKE_SOURCE_DIR}/src/App/App.c
 )
 
 # including the different directory for other source file
@@ -21,4 +22,5 @@ target_include_directories(todo PUBLIC
     ${CMAKE_SOURCE_DIR}/src/File_Handle
     ${CMAKE_SOURCE_DIR}/src/Container
     ${CMAKE_SOURCE_DIR}/src/Todo
+    ${CMAKE_SOURCE_DIR}/src/App
 )
